--- a/fancy-weather/src/css/abstracts/_variables.scss
+++ b/fancy-weather/src/css/abstracts/_variables.scss
@@ -1,1 +1,8 @@
+// COLORS
 
+$color-blue: #ABDDF6;
+$color-blue-light: rgba(171, 221, 246, .3);
+$color-blue-dark: rgb(114, 204, 249);
+$color-orange: #F38630;
+$color-white: #fff;
+$color-black: #000;
