feat: add main html layout and styles

--- a/fancy-weather/src/css/base/_base.scss
+++ b/fancy-weather/src/css/base/_base.scss
@@ -18,5 +18,9 @@ body {
 
 .wrapper{
     max-width: 1440px;
+    height: 100vh;
     margin: 0 auto;
+    background-image: url('./../../img/forest.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
