--- a/fancy-weather/src/css/components/_arrow-block.scss
+++ b/fancy-weather/src/css/components/_arrow-block.scss
@@ -8,8 +8,19 @@
     border-radius: 8px;
     cursor: pointer;
     border: 0;
+    outline: none;
+    transition: all .4s;
 
     &__img {
       transform: scale(1.2);
+      transition: all .4s;
+    }
+
+    &:hover{
+      background-color: $color-blue-dark;
+
+      .arrows-block__img{
+        transform: scale(1.3);
+      }
     }
 }
