--- a/fancy-weather/src/css/layout/_main.scss
+++ b/fancy-weather/src/css/layout/_main.scss
@@ -1,6 +1,7 @@
 @import './../abstracts/variables';
 .main {
     width: 100%;
+    height: 600px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -128,3 +129,5 @@
         font-family: Lato-Thin;
     }
 }
+
+#map { position: absolute; top: 0; bottom: 0; width: 100%; }
