--- a/fancy-weather/src/css/layout/_header.scss
+++ b/fancy-weather/src/css/layout/_header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100px;
     display: grid;
-    grid-template-columns: repeat(3, 90px) 1fr;
+    grid-template-columns: repeat(3, 90px) 120px 1fr;
     align-content: center;
     justify-items: center;
 }
