feat: add responsive layout

--- a/fancy-weather/src/css/abstracts/_variables.scss
+++ b/fancy-weather/src/css/abstracts/_variables.scss
@@ -6,3 +6,11 @@ $color-blue-dark: rgb(114, 204, 249);
 $color-orange: #F38630;
 $color-white: #fff;
 $color-black: #000;
+
+
+//responsive variables
+$content-width: 1440px;
+$tablet-big-width: 1200px;
+$tablet-width: 1050px;
+$mobile-big-width: 700px;
+$mobile-small-width: 320px;
