--- a/fancy-weather/src/css/components/_arrow-block.scss
+++ b/fancy-weather/src/css/components/_arrow-block.scss
@@ -1,4 +1,5 @@
 @import './../abstracts/variables';
+@import './../abstracts/mixins';
 
 .arrows-block {
     width: 45px;
@@ -12,15 +13,24 @@
     transition: all .4s;
 
     &__img {
-      transform: scale(1.2);
+      transform: scale(.7);
       transition: all .4s;
+      margin: -2px 0 0 -2px;
     }
 
     &:hover{
-      background-color: $color-blue-dark;
+      background-color: $color-orange;
 
       .arrows-block__img{
-        transform: scale(1.3);
+        transform: scale(.8);
       }
+    }
+    @include media-tablet {
+      grid-row: 1/2;
+      justify-self: center;
+      margin-right: 27px;
+    }
+    @include media-mobile {
+      margin-right: 5px;
     }
 }
