--- a/fancy-weather/src/css/components/_city-search.scss
+++ b/fancy-weather/src/css/components/_city-search.scss
@@ -1,4 +1,5 @@
 @import './../abstracts/variables';
+@import './../abstracts/mixins';
 
 .city-search {
     width: 375px;
@@ -60,6 +61,17 @@
         transition: all .3s;
         cursor: pointer;
         z-index: 30;
+    }
+
+    @include media-tablet {
+        grid-row: 2/3;
+        grid-column: 1/5;
+        margin: 1rem 0 0 0;
+        justify-self: center;
+    }
+    
+    @include media-mobile {
+        width: 300px;
     }
 }
 
