--- a/fancy-weather/src/css/components/_language.scss
+++ b/fancy-weather/src/css/components/_language.scss
@@ -1,4 +1,5 @@
 @import './../abstracts/variables';
+@import './../abstracts/mixins';
 
 .language {
     width: 70px;
@@ -63,5 +64,17 @@
 
         }
     }
+
+    @include media-tablet {
+        grid-row: 1/2;
+        margin-right: 30px;
+    }
+
+    @include media-mobile {
+        margin-right: 40px;
+    }
+    @include media-mobile {
+        margin-right: 5px;
+      }
 
 }
