--- a/fancy-weather/src/css/layout/_header.scss
+++ b/fancy-weather/src/css/layout/_header.scss
@@ -1,3 +1,6 @@
+@import './../abstracts/variables';
+@import './../abstracts/mixins';
+
 .header {
     width: 100%;
     height: 100px;
@@ -5,4 +8,18 @@
     grid-template-columns: repeat(3, 90px) 120px 1fr;
     align-content: center;
     justify-items: center;
+
+    @include media-tablet {
+        grid-template-columns: repeat(3, 90px) 120px;
+        width: 390px;
+        margin: 0 auto;
+        grid-template-rows: repeat(2, 1fr);
+    }
+    @include media-mobile {
+        grid-template-columns: repeat(3, 70px) 90px;
+    }
+    @include media-mobile {
+        grid-template-columns: 1fr;
+        width: 300px;
+    }
 }
