--- a/fancy-weather/src/css/layout/_main.scss
+++ b/fancy-weather/src/css/layout/_main.scss
@@ -1,10 +1,22 @@
 @import './../abstracts/variables';
+@import './../abstracts/mixins';
+
 .main {
     width: 100%;
     height: 600px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+
+    @include media-tablet {
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 450px;
+    }
+    @include media-mobile {
+        grid-template-rows: 1230px 390px;
+    }
 }
+
 
 .weather{
     grid-column: 1/2;
@@ -13,6 +25,10 @@
     &__current{
         width: 100%;
         height: 450px;
+        @include media-mobile {
+            height: 840px;
+        }
+        
     }
 
     &__forecast{
@@ -20,12 +36,35 @@
         height: 150px;
         display: grid;
         grid-template-columns: repeat(3,1fr);
+
+        @include media-mobile {
+            grid-template-columns: 200px;
+        }
+        @include media-mobile {
+            width: 200px;
+            margin: 0 auto;
+        }
+    }
+
+    @include media-tablet {
+       grid-column: 1/2;
+       grid-row: 1/2;
+       width: 58rem;
+       margin: 0 auto;
+    }
+    @include media-mobile {
+        width: 100%;
     }
 }
 
 .location{
     grid-column: 2/3;
     height: 100%;
+
+    @include media-tablet {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
 }
 
 .current{
@@ -38,16 +77,34 @@
         text-transform: uppercase;
         padding: 50px 10px 20px;
         line-height: 57px;
+
+        @include media-tablet {
+            text-align: center;
+        }
+        @include media-mobile {
+            padding: 3rem 0 0;
+            font-size: 4.4rem;
+        }
     }
 
     &__city{
         font-size: 5.4rem;
         margin-left: 3rem;
+        white-space: nowrap;
+        @include media-mobile {
+            font-size: 4.4rem;
+        }
+        @include media-mobile {
+            margin-left: 0;
+        }
     }
 
     &__date{
         font-size: 2.5rem;
         margin-left: 3rem;
+        @include media-mobile {
+            margin-left: 0;
+        }
     }
 
     &__temperature{
@@ -56,6 +113,16 @@
         position: absolute;
         top: 25%;
         left: 10%;
+        @include media-laptop-small {
+            top: 37%;
+            font-size: 25rem;
+        }
+        @include media-mobile {
+            text-align: center;
+            position: static;
+            font-size: 22rem !important;
+            margin-top: -2rem;
+        }
 
     }
 
@@ -63,18 +130,40 @@
         width: 150px;
         position: absolute;
         top: 25%;
-        right: 20%;
+        right: 13%;
+
+        @include media-laptop-small {
+            right: -3%;
+        }
+        @include media-mobile {
+            right: 0 !important;
+            margin: -3rem auto 0;
+            position: static;
+            width: 180px;
+        }
+       
     }
 
     &__details{
         position: absolute;
         top: 60%;
-        right: 5%;
+        right: -2rem;
         font-size: 2.2rem;
         color: $color-white;
         font-family: Lato-Thin;
         line-height: 37px;
         text-transform: uppercase;
+
+        @include media-laptop-small {
+            right: -8%;
+        }
+        @include media-mobile {
+            margin: 0 auto;
+            position: static;
+            width: 220px;
+            text-align: center;
+            font-size: 3.2rem;
+        }
     }
 }
 
@@ -90,7 +179,9 @@
         font-size: 2.2rem;
         line-height: 2.7rem;
         text-transform: uppercase;
-        
+        @include media-mobile {
+            font-size: 3.2rem;
+        }
     }
 
     &__temperature{
@@ -105,7 +196,11 @@
         width: 70px;
         position: absolute;
         top: 13px;
-        right: -8px;
+        right: -15px;
+
+        @include media-laptop-small {
+            right: -35px;
+        }
     }
 }
 
@@ -118,11 +213,26 @@
 
     &__coordinates{
         position: absolute;
-        left: 27%;
+        left: 21%;
         bottom: 17%;
         font-size: 2.4rem;
         color: $color-white;
         font-family: Lato-Thin;
+
+        @include media-laptop-small {
+            left: 17%;
+            bottom: 22%;
+        }
+
+        @include media-tablet {
+            left: 31% !important;
+            bottom: 9% !important; 
+        }
+         @include media-mobile {
+            font-size: 1.6rem;
+            bottom: 12% !important;
+            left: 26%!important;
+        }
     }
 }
 
@@ -134,5 +244,17 @@
     clip-path: polygon(50% 0, 100% 0, 100% 52%, 100% 52%, 100% 100%, 70% 100%, 56% 88%, 0 88%, 0 29%, 0 0);
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
+
+    @include media-laptop-small {
+        width: 39rem;
+        height: 39rem;
+    }
+    @include media-tablet {
+       top: 10px;
+    }
+    @include media-mobile {
+        width: 30rem !important;
+        height: 32rem !important;
+    }
 
 }
