fix: fixed responsive layout

--- a/fancy-weather/src/css/components/_audio-information.scss
+++ b/fancy-weather/src/css/components/_audio-information.scss
@@ -24,6 +24,8 @@
     }
     @include media-mobile {
         margin-left: 5px;
+        font-family: Montserrat-Bold;
+        font-size: 1.1rem;
     }
 }
 
