--- a/fancy-weather/src/css/base/_fonts.scss
+++ b/fancy-weather/src/css/base/_fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
-    font-family: Lato-Regular;
-    src: url(../../fonts/Lato-Regular.ttf);
+    font-family: Montserrat-Regular;
+    src: url(../../fonts/Montserrat-Regular.ttf);
 }
 
 @font-face {
-    font-family: Lato-Bold;
-    src: url(../../fonts/Lato-Bold.ttf);
+    font-family: Montserrat-Bold;
+    src: url(../../fonts/Montserrat-Bold.ttf);
 }
 
 @font-face {
-    font-family: Lato-Thin;
-    src: url(../../fonts/Lato-Light.ttf);
+    font-family: Montserrat-Light;
+    src: url(../../fonts/Montserrat-Light.ttf);
 }
