--- a/fancy-weather/src/css/layout/_footer.scss
+++ b/fancy-weather/src/css/layout/_footer.scss
@@ -5,7 +5,7 @@
 .footer{
 
     font-size: 2rem;
-    font-family: Lato-Thin;
+    font-family: Montserrat-Light;
     cursor: pointer;
     max-width: 100%;
     height: 20px;
@@ -15,14 +15,14 @@
         text-decoration: none;
         color: $color-white;
         position: absolute;
-        right: 13%;
+        right: 16%;
 
         @include media-tablet {
            right: 55%;
            bottom: 1rem;
         }
         @include media-mobile {
-           left: 20%;
+           left: 16%;
            bottom: 1rem;
         }
     }
